Create a default KComponenentData if there is none. This is usefull for pure Qt applications that loads KDE plugins.

KStyle and Oxygen actually worked around the problem but that can be removed
QtCreator may crash when opening a file dialog because KFileDialog gets hooked by some designer plugin and, KFileDialog request KGlobal::config for many things.

BUG: 182861


svn path=/trunk/KDE/kdelibs/; revision=920285